--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web studio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,159 +23,175 @@
   <body>
     <!-- Шапка -->
     <header>
-      <nav>
-        <ul class="no-style-type">
+      <div class="container navigation"><a href="./index.html" class="logo-accent no-decor"
+                ><span class="logo">Web</span> studio</a
+              >
+        <nav>
+          <ul class="no-style-type navigation list-nav">
+            <li><a href="./index.html" class="link-nav no-decor">Studio</a></li>
+            <li>
+              <a href="./portfolio.html" class="link-nav no-decor">Portfolio</a>
+            </li>
+            <li><a href="" class="link-nav no-decor">Contacts</a></li>
+          </ul>
+        </nav>
+        <ul class="no-style-type navigation social-list-nav">
           <li>
-            <a href="./index.html" class="logo-accent no-decor"
-              ><span class="logo">Web</span> studio</a
+            <a href="mailto:info@devstudio" class="social-list no-decor"
+              >info@devstudio</a
             >
           </li>
-          <li><a href="./index.html" class="link-nav no-decor">Studio</a></li>
           <li>
-            <a href="./portfolio.html" class="link-nav no-decor">Portfolio</a>
+            <a href="tel:+11(000)111-11-11" class="social-list no-decor"
+              >+11 (000) 111-11-11</a
+            >
           </li>
-          <li><a href="" class="link-nav no-decor">Contacts</a></li>
         </ul>
-      </nav>
-      <ul class="no-style-type">
-        <li>
-          <a href="mailto:info@devstudio" class="social-list no-decor"
-            >info@devstudio</a
-          >
-        </li>
-        <li>
-          <a href="tel:+11(000)111-11-11" class="social-list no-decor"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!-- Герой -->
-      <section>
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-btn">Order Service</button>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-btn">Order Service</button>
+        </div>
       </section>
       <!-- Преимущества -->
       <section>
-        <h2 hidden>Dignity</h2>
-        <ul class="no-style-type">
-          <li>
-            <h3 class="subtitle">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>Dignity</h2>
+          <ul class="no-style-type">
+            <li>
+              <h3 class="subtitle">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="subtitle">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="subtitle">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="subtitle">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Продукт -->
       <section>
-        <h2 class="title">What are we doing</h2>
-        <ul class="no-style-type">
-          <li>
-            <img
-              src="./images/image-1.jpg"
-              alt="Computer"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/image-2.jpg"
-              alt="Phone"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/image-3.jpg"
-              alt="Phone in hand"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">What are we doing</h2>
+          <ul class="no-style-type">
+            <li>
+              <img
+                class="image"
+                src="./images/image-1.jpg"
+                alt="Computer"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                class="image"
+                src="./images/image-2.jpg"
+                alt="Phone"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                class="image"
+                src="./images/image-3.jpg"
+                alt="Phone in hand"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Команда -->
       <section class="team">
-        <h2 class="title">Our Team</h2>
-        <ul class="no-style-type">
-          <li>
-            <img
-              src="./images/image-4.jpg"
-              alt="Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="subtitle">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/image-5.jpg"
-              alt="Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="subtitle">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/image-6.jpg"
-              alt="Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="subtitle">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/image-7.jpg"
-              alt="UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="subtitle">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title">Our Team</h2>
+          <ul class="no-style-type">
+            <li>
+              <img
+                class="image"
+                src="./images/image-4.jpg"
+                alt="Product Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="subtitle">Mark Guerrero</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li>
+              <img
+                class="image"
+                src="./images/image-5.jpg"
+                alt="Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <h3 class="subtitle">Tom Ford</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                class="image"
+                src="./images/image-6.jpg"
+                alt="Marketing"
+                width="264"
+                height="260"
+              />
+              <h3 class="subtitle">Camila Garcia</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img
+                class="image"
+                src="./images/image-7.jpg"
+                alt="UI Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="subtitle">Daniel Wilson</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Футер -->
-    <footer>
-      <a href="./" class="logo-accent-white no-decor"
-        ><span class="logo">Web</span> studio</a
-      >
-      <p class="text-white">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer">
+      <div class="container">
+        <a href="./" class="logo-accent-white no-decor"
+          ><span class="logo">Web</span> studio</a
+        >
+        <p class="text-white">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
