--- a/portfolio.html
+++ b/portfolio.html
@@ -14,222 +14,237 @@
   <body>
     <!-- Шапка -->
     <header>
-      <nav>
+      <div class="container">
+        <nav class="">
+          <ul class="no-style-type">
+            <li class="">
+              <a href="./index.html" class="logo-accent no-decor"
+                ><span class="logo">Web</span> studio</a
+              >
+            </li>
+            <li class=""><a href="./index.html" class="link-nav no-decor">Studio</a></li>
+            <li class="">
+              <a href="./portfolio.html" class="link-nav no-decor">Portfolio</a>
+            </li>
+            <li class=""><a href="" class="link-nav no-decor">Contacts</a></li>
+          </ul>
+        </nav>
         <ul class="no-style-type">
           <li>
-            <a href="./index.html" class="logo-accent no-decor"
-              ><span class="logo">Web</span> studio</a
+            <a href="mailto:info@devstudio" class="social-list no-decor"
+              >info@devstudio</a
             >
           </li>
-          <li><a href="./index.html" class="link-nav no-decor">Studio</a></li>
           <li>
-            <a href="./portfolio.html" class="link-nav no-decor">Portfolio</a>
+            <a href="tel:+11(000)111-11-11" class="social-list no-decor"
+              >+11 (000) 111-11-11</a
+            >
           </li>
-          <li><a href="" class="link-nav no-decor">Contacts</a></li>
         </ul>
-      </nav>
-      <ul class="no-style-type">
-        <li>
-          <a href="mailto:info@devstudio" class="social-list no-decor"
-            >info@devstudio</a
-          >
-        </li>
-        <li>
-          <a href="tel:+11(000)111-11-11" class="social-list no-decor"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!-- Фильтры -->
       <section>
-        <h2 hidden>Filters</h2>
-        <ul class="no-style-type">
-          <li>
-            <button type="button" class="filters-btn">All</button>
-          </li>
-          <li>
-            <button type="button" class="filters-btn">Web Site</button>
-          </li>
-          <li>
-            <button type="button" class="filters-btn">App</button>
-          </li>
-          <li>
-            <button type="button" class="filters-btn">Design</button>
-          </li>
-          <li>
-            <button type="button" class="filters-btn">Marketing</button>
-          </li>
-        </ul>
-        <!-- Примеры работ -->
-        <h2 hidden>Work examples</h2>
-        <ul class="no-style-type">
-          <li>
-            <a href="#" target="_blank" rel="noopener noreferrer">
-              <img
-                src="./images/portfolio-1.jpg"
-                width="360"
-                height="300"
-                alt="Banking App Interface Concept"
-              />
-            </a>
-            <h3 class="subtitle">Banking App Interface Concept</h3>
-            <p class="text">App</p>
-            <p class="text-cloud">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </li>
-          <li>
-            <a href="#" target="_blank" rel="noopener noreferrer">
-              <img
-                src="./images/portfolio-2.jpg"
-                width="360"
-                height="300"
-                alt="Cashless Payment"
-              />
-            </a>
-            <h3 class="subtitle">Cashless Payment</h3>
-            <p class="text">Marketing</p>
-            <p class="text-cloud">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </li>
-          <li>
-            <a href="#" target="_blank" rel="noopener noreferrer">
-              <img
-                src="./images/portfolio-3.jpg"
-                width="360"
-                height="300"
-                alt="Meditaion App"
-              />
-            </a>
-            <h3 class="subtitle">Meditaion App</h3>
-            <p class="text">App</p>
-            <p class="text-cloud">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </li>
-          <li>
-            <a href="#" target="_blank" rel="noopener noreferrer">
-              <img
-                src="./images/portfolio-4.jpg"
-                width="360"
-                height="300"
-                alt="Taxi Service"
-              />
-            </a>
-            <h3 class="subtitle">Taxi Service</h3>
-            <p class="text">Marketing</p>
-            <p class="text-cloud">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </li>
-          <li>
-            <a href="#" target="_blank" rel="noopener noreferrer">
-              <img
-                src="./images/portfolio-5.jpg"
-                width="360"
-                height="300"
-                alt="Screen Illustrations"
-              />
-            </a>
-            <h3 class="subtitle">Screen Illustrations</h3>
-            <p class="text">Design</p>
-            <p class="text-cloud">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </li>
-          <li>
-            <a href="#" target="_blank" rel="noopener noreferrer">
-              <img
-                src="./images/portfolio-6.jpg"
-                width="360"
-                height="300"
-                alt="Online Courses"
-              />
-            </a>
-            <h3 class="subtitle">Online Courses</h3>
-            <p class="text">Marketing</p>
-            <p class="text-cloud">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </li>
-          <li>
-            <a href="#" target="_blank" rel="noopener noreferrer">
-              <img
-                src="./images/portfolio-7.jpg"
-                width="360"
-                height="300"
-                alt="Instagram Stories Concept"
-              />
-            </a>
-            <h3 class="subtitle">Instagram Stories Concept</h3>
-            <p class="text">Design</p>
-            <p class="text-cloud">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </li>
-          <li>
-            <a href="#" target="_blank" rel="noopener noreferrer">
-              <img
-                src="./images/portfolio-8.jpg"
-                width="360"
-                height="300"
-                alt="Organic Food"
-              />
-            </a>
-            <h3 class="subtitle">Organic Food</h3>
-            <p class="text">Web Site</p>
-            <p class="text-cloud">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </li>
-          <li>
-            <a href="#" target="_blank" rel="noopener noreferrer">
-              <img
-                src="./images/portfolio-9.jpg"
-                width="360"
-                height="300"
-                alt="Fresh Coffee"
-              />
-            </a>
-            <h3 class="subtitle">Fresh Coffee</h3>
-            <p class="text">Web Site</p>
-            <p class="text-cloud">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>Filters</h2>
+          <ul class="no-style-type">
+            <li>
+              <button type="button" class="filters-btn">All</button>
+            </li>
+            <li>
+              <button type="button" class="filters-btn">Web Site</button>
+            </li>
+            <li>
+              <button type="button" class="filters-btn">App</button>
+            </li>
+            <li>
+              <button type="button" class="filters-btn">Design</button>
+            </li>
+            <li>
+              <button type="button" class="filters-btn">Marketing</button>
+            </li>
+          </ul>
+          <!-- Примеры работ -->
+          <h2 hidden>Work examples</h2>
+          <ul class="no-style-type">
+            <li>
+              <a href="#" target="_blank" rel="noopener noreferrer">
+                <img
+                  class="image"
+                  src="./images/portfolio-1.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App Interface Concept"
+                />
+              </a>
+              <h3 class="subtitle">Banking App Interface Concept</h3>
+              <p class="text">App</p>
+              <p class="text-cloud">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noopener noreferrer">
+                <img
+                  class="image"
+                  src="./images/portfolio-2.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cashless Payment"
+                />
+              </a>
+              <h3 class="subtitle">Cashless Payment</h3>
+              <p class="text">Marketing</p>
+              <p class="text-cloud">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noopener noreferrer">
+                <img
+                  class="image"
+                  src="./images/portfolio-3.jpg"
+                  width="360"
+                  height="300"
+                  alt="Meditaion App"
+                />
+              </a>
+              <h3 class="subtitle">Meditaion App</h3>
+              <p class="text">App</p>
+              <p class="text-cloud">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noopener noreferrer">
+                <img
+                  class="image"
+                  src="./images/portfolio-4.jpg"
+                  width="360"
+                  height="300"
+                  alt="Taxi Service"
+                />
+              </a>
+              <h3 class="subtitle">Taxi Service</h3>
+              <p class="text">Marketing</p>
+              <p class="text-cloud">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noopener noreferrer">
+                <img
+                  class="image"
+                  src="./images/portfolio-5.jpg"
+                  width="360"
+                  height="300"
+                  alt="Screen Illustrations"
+                />
+              </a>
+              <h3 class="subtitle">Screen Illustrations</h3>
+              <p class="text">Design</p>
+              <p class="text-cloud">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noopener noreferrer">
+                <img
+                  class="image"
+                  src="./images/portfolio-6.jpg"
+                  width="360"
+                  height="300"
+                  alt="Online Courses"
+                />
+              </a>
+              <h3 class="subtitle">Online Courses</h3>
+              <p class="text">Marketing</p>
+              <p class="text-cloud">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noopener noreferrer">
+                <img
+                  class="image"
+                  src="./images/portfolio-7.jpg"
+                  width="360"
+                  height="300"
+                  alt="Instagram Stories Concept"
+                />
+              </a>
+              <h3 class="subtitle">Instagram Stories Concept</h3>
+              <p class="text">Design</p>
+              <p class="text-cloud">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noopener noreferrer">
+                <img
+                  class="image"
+                  src="./images/portfolio-8.jpg"
+                  width="360"
+                  height="300"
+                  alt="Organic Food"
+                />
+              </a>
+              <h3 class="subtitle">Organic Food</h3>
+              <p class="text">Web Site</p>
+              <p class="text-cloud">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noopener noreferrer">
+                <img
+                  class="image"
+                  src="./images/portfolio-9.jpg"
+                  width="360"
+                  height="300"
+                  alt="Fresh Coffee"
+                />
+              </a>
+              <h3 class="subtitle">Fresh Coffee</h3>
+              <p class="text">Web Site</p>
+              <p class="text-cloud">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Футер -->
-    <footer>
-      <a href="./" class="logo-accent-white no-decor"
-        ><span class="logo">Web</span> studio</a
-      >
-      <p class="text-white">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer">
+      <div class="container">
+        <a href="./" class="logo-accent-white no-decor"
+          ><span class="logo">Web</span> studio</a
+        >
+        <p class="text-white">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
