--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >
           <ul class="no-style-type list-nav">
             <li class="item-nav">
-              <a href="./index.html" class="link-nav no-decor">Studio</a>
+              <a href="./index.html" class="link-nav no-decor current">Studio</a>
             </li>
             <li class="item-nav">
               <a href="./portfolio.html" class="link-nav no-decor">Portfolio</a>
