--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
               <a href="./index.html" class="link-nav no-decor">Studio</a>
             </li>
             <li class="item-nav">
-              <a href="./portfolio.html" class="link-nav no-decor">Portfolio</a>
+              <a href="./portfolio.html" class="link-nav no-decor current">Portfolio</a>
             </li>
             <li class="item-nav">
               <a href="" class="link-nav no-decor">Contacts</a>
